--- a/chess.css
+++ b/chess.css
@@ -2,3 +2,12 @@ body {
     background: #e8e7de;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.chessboard {
+    width: 640px;
+    height: 640px;
+    margin: 20px;
+    border: 10px solid #000;
+    border-radius: 4px;
+    background: #e59110;
+    box-shadow: 5px 5px 8px #bebdt, -5px -5px 8px #ffffff;
+}
