--- a/chess.css
+++ b/chess.css
@@ -21,3 +21,13 @@ body {
     display: table-cell;
     vertical-align: middle;
 }
+.white {
+    float: left;
+    width: 80px;
+    height: 80px;
+    background-color: #ffcfb6;
+    font-size: 50px;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+}
