--- a/chess.css
+++ b/chess.css
@@ -5,7 +5,7 @@ body {
 .chessboard {
     width: 640px;
     height: 640px;
-    margin: 20px;
+    margin: auto;
     border: 10px solid #000;
     border-radius: 4px;
     background: #e59110;
